// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`descendantsFromRender should break paragraphs at LineBreak tags 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "text": "This is a test.",
      },
    ],
    "type": "paragraph",
  },
  Object {
    "children": Array [
      Object {
        "text": "With two paragraphs.",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`descendantsFromRender should join a space element to text element 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "text": "Test ",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`descendantsFromRender should render a single-level condition 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "text": "This is a test ",
      },
      Object {
        "tree": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "data": Object {
                  "tag": "String",
                  "value": "with an If",
                },
                "id": "",
              },
            ],
            "data": Object {
              "if": "testVariable",
              "tag": "Statement",
            },
            "id": "",
          },
        ],
        "type": "ifWrapper",
      },
      Object {
        "tree": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "data": Object {
                  "tag": "String",
                  "value": "and an Else",
                },
                "id": "",
              },
            ],
            "data": Object {
              "if": "testVariable",
              "tag": "Statement",
            },
            "id": "",
          },
        ],
        "type": "ifWrapper",
      },
      Object {
        "text": " and more text.",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`descendantsFromRender should render a space after a link in a second paragraph 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "text": "Test",
      },
    ],
    "type": "paragraph",
  },
  Object {
    "children": Array [
      Object {
        "text": "Another ",
      },
      Object {
        "children": Array [
          Object {
            "text": "test",
          },
        ],
        "to": "testFeature",
        "type": "featureLink",
      },
      Object {
        "text": " ",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`descendantsFromRender should return a text description 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "text": "This is a test ",
      },
      Object {
        "children": Array [
          Object {
            "text": "with a link",
          },
        ],
        "to": "testFeature",
        "type": "featureLink",
      },
      Object {
        "text": " and more text.",
      },
    ],
    "type": "paragraph",
  },
]
`;
